# torrent-rs

./: Cargo.toml
src/: decode_torrent.rs  definitions.rs  file.rs  handshake.rs  lib.rs  peer.rs  tracker.rs
tests/: handshake.rs  peer.rs
tests/torrent_files/: test.torrent  test_local.torrent
