[package]
name = "torrent-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full", "tracing"] }
rand = "0.8.4"
serial_test = "0.5.1"
bendy = "0.3.3"
sha1 = "0.10.0"
console-subscriber = "0.1.1"
libc = "0.2.113"
rio = "0.9.4"

[build]
rustflags = ["--cfg", "tokio_unstable"]
